--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SamirTyping</title>
-    <link rel="icon" type="https://media.istockphoto.com/id/1020966590/photo/cat-in-a-tie-with-a-white-keyboard.jpg?s=612x612&w=0&k=20&c=HAPUVZst99TuNtMj5k34ZacaS96hg0G0bl-dWt1jEYE=" href="favicon.png" />
+  <link rel="shortcut icon" href="img.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="ll">
+     
         <div class="values">
     <div class="aa WPM">
         <div>WPM:</div>
